# kinetic-python-keypair-compat

./: Makefile  README.md  pyproject.toml
kinetic_python_keypair_compact/: base64.py  keypair_compact.py  stellar_keypair.py  str_key.py
tests/: keypair_compact_test.py
